--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reciept_management",
+  "name": "tax_reciept_management",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,23 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "idb": "^8.0.3",
-    "luxon": "^3.7.2",
-    "pdf-lib": "^1.17.1",
+    "@react-oauth/google": "^0.13.4",
+    "gapi-script": "^1.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.11.0",
-    "uuid": "^13.0.0",
     "vite-plugin-pwa": "^1.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@types/luxon": "^3.7.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
